# open-runtimes

./: .gitignore  .gitpod.yml  .travis.yml  BASELINE.md  Base-Before.Dockerfile  CONTRIBUTING.md  LICENSE  Makefile  README.md  base-after.dockerfile  base-before.dockerfile  build.sh  ci-cleanup.sh  ci-helpers.sh  ci-runtime-build.sh  ci-runtime-prepare.sh  ci_release.sh  ci_test.sh  ci_tests.sh  composer.json  deploy.sh  docker-bake.hcl  docker-bake.json  docker-compose.yml  formatter.sh  phpunit.xml  supervisord.conf  temp_test.sh  test.http  tests-v3-commands.sh  tests-v3-node.sh  tests-v3.sh  tests.sh  tests_ci.sh  tests_dev.sh  tests_local.sh  trigger_tests.txt
.claude/: settings.local.json
.github/workflows/: build.yaml  deploy.yaml  image-size.yaml  publish-workspace.yaml  publish.yaml  test.yaml  tests.sh  tests.yml  version-audit.yml
.zed/: settings.json
ci/: bake.ts  bun.lockb  common.ts  index.ts  package.json  runtimes.toml  test.ts  types.ts
ci/src/: index.ts  runtimes.toml
docker/: base-after.dockerfile  base-before.dockerfile
docs/: add-runtime.md  add-version.md  testing.md
helpers/: after-build.sh  before-build.sh  before-start.sh  build-cache-env.sh  build-cache-restore.sh  build-cache-save.sh  build-cache.sh  build-manifest.sh  build.sh  extract-code.sh  prepare-compile.sh  prepare-packing.sh  select-compression.sh  server.sh  start.sh  timings.sh
helpers/lifecycle/: build.sh  compression.sh  extract.sh  lib.sh  start.sh
image/node-17.0/: build.sh
node-17.0/: .dockerignore  README.md
runtimes/: build-local.sh  build.sh  deploy.sh
runtimes/.test/: Dockerfile  README.md
runtimes/bun/: Dockerfile  README.md  bun.dockerfile
runtimes/bun-0.5.9/: .env  .gitignore  Dockerfile  README.md  build.sh  bun.lockb  docker-compose.yml  package.json  server.ts  start.sh
runtimes/bun-1.0/: Dockerfile  README.md  docker-compose.yml  package.json
runtimes/bun-1.1/: .env  Dockerfile  README.md  docker-compose.yml
runtimes/bun-edge/: Dockerfile  README.md  build.sh  docker-compose.yml  package-lock.json  package.json  server.js  server.ts  start.sh  tsconfig.json
runtimes/cpp/: .gitignore  Dockerfile  README.md  cpp.dockerfile
runtimes/cpp-17/: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  prepare.sh  service.yaml  start.sh
runtimes/cpp-17/example/: index.cc
runtimes/cpp-17/src/: RuntimeContext.h  RuntimeLogger.h  RuntimeOutput.h  RuntimeRequest.h  RuntimeResponse.h  Wrapper.h  main.cc
runtimes/cpp-20/: .env  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
runtimes/crystal-1.7.1/: .env  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  server.cr  shard.yml  start.sh
runtimes/dart/: Dockerfile  README.md  dart.dockerfile  pubspec.yaml.fallback
runtimes/dart-2.12/: .env  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.dart  service.yaml
runtimes/dart-2.13/: Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  pubspec.yaml  server.dart  service.yaml
runtimes/dart-2.14/: Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.dart  service.yaml
runtimes/dart-2.15/: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  function_types.dart  pubspec.yaml  server.dart  service.yaml  start.sh
runtimes/dart-2.16/: Dockerfile  README.md  deployment.yaml  docker-compose.yml  server.dart  service.yaml
runtimes/dart-2.17/: .dockerignore  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.dart  service.yaml
runtimes/dart-2.18/: .env  Dockerfile  README.md  build.sh  docker-compose.yml  function_types.dart  server.dart
runtimes/dart-2.19/: Dockerfile  README.md  docker-compose.yml  pubspec.yaml
runtimes/dart-3.0/: .env  Dockerfile  README.md  docker-compose.yml  pubspec.yaml
runtimes/dart-3.1/: .gitignore  Dockerfile  README.md  docker-compose.yml
runtimes/dart-3.3/: Dockerfile  README.md  docker-compose.yml  pubspec.yaml.fallback
runtimes/demo-1.21/: Dockerfile  README.md  docker-compose.yml  server.ts
runtimes/deno-1.12/: Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.ts  service.yaml  start.sh
runtimes/deno-1.13/: .env  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  service.yaml
runtimes/deno-1.14/: .env  .gitignore  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.ts  service.yaml  start.sh
runtimes/deno-1.20/: Dockerfile  docker-compose.yml  server.ts
runtimes/deno-1.21/: .gitignore  Dockerfile  README.md  build.sh  deployment.yaml  docker-compose.yml  server.ts  service.yaml  start.sh
runtimes/deno-1.24/: .env  Dockerfile  README.md  build.sh  docker-compose.yml  server.ts  (+1 more)
runtimes/rust/versions/latest/: .gitignore  Cargo.toml
runtimes/rust/versions/latest/helpers/: prepare-compile.sh  server.sh
runtimes/rust/versions/latest/hooks/: compile.sh
runtimes/rust/versions/latest/src/: main.rs
runtimes/rust/versions/latest/src/function/: Cargo.toml  lib.rs
runtimes/rust/versions/latest/src/function/types/: Cargo.toml
runtimes/rust/versions/latest/src/function/types/src/: lib.rs  logger.rs  request.rs
scripts/: rollback.sh
tests/: Base.php  BaseDev.php  BaseJS.php  BaseV3.php  BuildCache.php  BuildCompression.php  BuildManifest.php  Bun059.php  CSR.php  Client.php  Cpp17.php  Cpp20.php  Crystal171.php  Dart212.php  Dart213.php  Dart214.php  Dart215.php  Dart216.php  Dart217.php  Dart218.php  Database.php  Deno112.php  Deno113.php  Deno114.php  Deno120.php  Deno121.php  Deno124.php  DotNet31.php  DotNet60.php  DotNet70.php  Elixir114.php  Flutter.php  Go119.php  Java11.php  Java17.php  Java18.php  Java19.php  Java20.php  Java8.php  Kotlin16.php  (+29 more)
tests/resources/functions/rust/latest/: .gitignore  Cargo.toml  tests.rs
tests/resources/functions/rust/latest/types/: Cargo.toml  PUBLISHING.md
tests/resources/functions/rust/latest/types/src/: context.rs  lib.rs  logger.rs  request.rs  response.rs
(+1763 files in other folders)
