[workspace]
members = [".", "src/function"]
resolver = "2"

[package]
name = "rust_runtime"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
# TODO: Migrate to the official `openruntimes` crate once
# github.com/open-runtimes/types-for-rust exists and publishes under the
# bare `openruntimes` name. This temporary mirror lives at
# github.com/ChiragAgg5k/types-for-rust; the `package` alias keeps user
# code importing `openruntimes::*` so only this manifest line changes
# during the cutover.
openruntimes = { version = "1.0.3", package = "chiragagg5k-openruntimes-types-for-rust" }
handler = { path = "src/function" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
libc = "0.2"
indexmap = "=2.13.0"

[[bin]]
name = "rust_runtime"
path = "src/main.rs"
