[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "handler"
path = "lib.rs"

[dependencies]
openruntimes = { path = "types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
md5 = "0.7"
base64 = "0.22"
